# tool-kit

.github/workflows/: build-flask.yml
GCP cloud deploy/: Dockerfile  clouddeploy-multi-region.yaml  clouddeploy-single-region.yaml  skaffold.yaml
cloud-deploy-gke/: clouddeploy-canary.yaml  clouddeploy-demo.yaml  clouddeploy.yaml  k8s-pod.yaml
cloudbuild-gke/: README.md  clouddeploy-canary.yaml  default.conf.template  kubernetes.yaml  skaffold.yaml
flask/: Dockerfile  app.py  compose.yaml  docker-compose.yaml  pyproject.toml
flask-sentry/: app.py  docker-compose.yaml  dockerfile
flask/.github/workflows/: build.yml
gcs-proxy/: README.md  cert.yaml  deployment.yaml  ingress.yaml  service.yaml
hpa/: README.md
hpa/memory/: hpa.yaml  python.yaml
k8s-hpa/: README.md  deployments.yaml  hpa.yaml
k8s-liveness-probe/: pod.yaml
k8s-pv-pvc/: README.md
k8s-service/external-ip/: 01_service.yaml  README.md
k8s-service/gke-cloud-cdn/: README.md  api.yml  ingress.yaml
k8s-service/internal-nginx-ingress/: README.md  app.yml  gke-ingress.yml  ingress.yml
k8s-statefulset/: 01_statefulset.yaml
k8s-troubleshooting/: demo.yml
k8s-udp-session-affanity/: Dockerfile  README.md  app.py  client.py
mean-socket/: app.js  docker-compose.yml  dockerfile  mongod.conf
nats/: Dockerfile  README.md  compose.yaml  jetstream-basic.py  jetstream-consumer-filtered.py
nfs-server/: 003_pv-pvc.yml  004_pod.yml  README.md
nginx/mtls/: app.py  (+3 more)
slides/: Deckset Tutorial.md  Marp Tutorial.md
socketio/: README.md  client.js  compose.yaml  dockerfile  package.json  server.js
soketi/: README.md  compose.yaml  config.json  index.html  main.py
soketi-load-test/: .env.example  Dockerfile  README.md  compose.yaml  loadtest.js
srs/: NOTES.md  docker-compose.yaml  srt.conf
uptrace/: .env  Dockerfile  __init__.py  app.py  docker-compose.yaml  otel-collector.yaml  pyproject.toml  trace.json  ubuntu-dockerfile  uptrace.yml
uptrace/config/: otel-collector.yaml  uptrace.crt  uptrace.key  uptrace.yml  uwsgi.ini
uptrace/demo/: __init__.py  endpoints_old.py  models.py  settings.py  tasks.py
uptrace/demo/endpoints/: __init__.py
(+496 files in other folders)
